Scroll spy implementation

--- a/src/styles/components/sidenav.scss
+++ b/src/styles/components/sidenav.scss
@@ -1,7 +1,10 @@
 @import "../variables.scss";
 
 .menu-items {
-  &:hover {
+  outline: none;
+
+  &:hover,
+  &:focus {
     svg {
       fill: $white;
       stroke: $white;
