--- a/src/styles/components/sidenav.scss
+++ b/src/styles/components/sidenav.scss
@@ -2,18 +2,20 @@
 
 .menu-items {
   outline: none;
+  border-bottom: 3px solid transparent;
+  padding-bottom: 0.25rem;
+  transition: all 0.3s;
 
-  &:hover,
-  &:focus {
+  &:hover {
     svg {
       fill: $white;
       stroke: $white;
       transform: scale(1.1);
-      transition: all 0.4s;
+      transition: all 0.3s;
     }
     span {
       color: $white;
-      transition: all 0.4s;
+      transition: all 0.3s;
     }
   }
 
@@ -22,15 +24,21 @@
     height: 1.5rem;
     fill: $lightgray;
     cursor: pointer;
-    transition: all 0.4s;
+    transition: all 0.3s;
   }
 
   span {
     font-family: "Montserrat", sans-serif;
     color: $lightgray;
     cursor: pointer;
-    transition: all 0.4s;
+    transition: all 0.3s;
   }
+}
+
+.active-link {
+  border-bottom: 3px solid $red;
+  padding-bottom: 0.25rem;
+  transition: all 0.3s;
 }
 
 .opaque {
