--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -82,6 +82,17 @@
     font-size: 0.7rem;
     min-height: 0;
     margin-left: 0.25rem;
+    position: absolute;
+    bottom: -18px;
+  }
+
+  .ant-form-item-explain.ant-form-item-explain-success {
+    color: $red;
+    font-size: 0.7rem;
+    min-height: 0;
+    margin-left: 0.25rem;
+    position: absolute;
+    bottom: -18px;
   }
 
   .ant-input-password-icon {
@@ -108,6 +119,7 @@
   //Ant checkbox styles override
   .ant-form label {
     font-size: 12px;
+    margin-top: 1.2rem;
   }
 
   .ant-checkbox-input:focus + .ant-checkbox-inner,
