--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -141,6 +141,7 @@
   .ant-btn {
     border: none;
     box-shadow: 0px 5px 10px #000000;
+    transition-duration: 0.2s;
 
     &:hover,
     &:focus {
@@ -148,6 +149,7 @@
       box-shadow: 0px 2px 5px #000000;
       background-color: $red;
       border-color: $red;
+      transition-duration: 0.2s;
     }
   }
 }
@@ -155,9 +157,6 @@
 //Small screens lanscape orientation
 @media only screen and (min-device-width: 280px) and (max-device-width: 760px) and (orientation: landscape) {
   .login {
-    svg {
-      display: none;
-    }
     h1 {
       font-size: 2rem;
     }
@@ -167,13 +166,17 @@
         padding: 14px 24px 0 24px;
       }
       .card-logo {
-        display: flex;
+        display: none;
       }
     }
 
     .ant-form {
       .ant-form-item {
         margin: 0.25rem 1rem;
+      }
+      .tmdb-logo {
+        width: 55%;
+        margin: 1rem auto;
       }
     }
 
